<resources>
    <string name="app_name">MedBox</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="schedule_notification">schedule_notification</string>
    <string name="humidity_temperature">Humidity + Temperature:</string>
    <string name="linked_bluetooth_devices">Linked Bluetooth devices:</string>
    <string name="search_linked_bt_devices">Search linked BT devices</string>
    <string name="connect_to_hc_05">Connect to HC-05</string>
    <string name="clear">Clear</string>
    <string name="times_a_day">Times a day:</string>
    <string name="frequency">Frequency:</string>
    <string name="number_of_pills">Number of pills:</string>
    <string name="set_an_alarm">Set an alarm :</string>
    <string name="enter_number_of_pills_in_stock">Enter number of pills in stock</string>

    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="title_treatment_deadline">Treatment deadline</string>
    <string name="title_continuous_use">Continuous use</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Successfully</string>
    <string name="successfully_deleted_message">Medicine deleted Successfully</string>
    <string name="reminder_message">It\'s Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <string name="title_activity_homepage">Homepage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type">Type:</string>
    <string name="_1_0">1.0</string>
    <string name="previous_arr"><![CDATA[<=]]></string>
    <string name="next_arr"><![CDATA[=>]]></string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>