<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_medicine_name"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_med_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_med_name" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_days"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/every_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_day" />

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_sunday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_monday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="M" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_tuesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="T" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_wednesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="W" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_thursday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="T" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_friday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="F" />


                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/dv_saturday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reminder"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="-30dp"
                        android:layout_marginRight="-30dp"
                        android:layout_weight="1"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:timePickerMode="spinner" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number_of_pills"
                                android:layout_weight="1"
                                android:layout_gravity="center_vertical"
                                android:textStyle="bold"
                                android:textColor="@color/color_light_grey"
                                />

                            <EditText
                                android:id="@+id/tv_dose_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:background="@drawable/drawable_underline"
                                android:gravity="right"
                                android:padding="4dp"
                                android:text="1.0"
                                android:inputType="numberDecimal"/>

                        </LinearLayout>


                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/spinner_dose_units"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="20dp"
                            android:entries="@array/medications_shape_array" />
                    </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>